@@ -218,6 +218,9 @@ BUG FIXES
 	sometimes warned incorrectly for time series with 'freq' not a
 	power of two (e.g. 12 or 24).
 
+    o	unique.default() now preserves the "tzone" attribute on
+	"POSIXct" objects.
+
 
 
 		CHANGES IN R VERSION 2.8.0
